--- a/Vinodrill_Back/appsettings.json
+++ b/Vinodrill_Back/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VinoDrillDbContext": "Server=localhost;port=5432;Database=vino; uid=postgres; password=postgres;"
+  }
 }
