--- a/Vinodrill_Back/appsettings.json
+++ b/Vinodrill_Back/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VinoDrillDbContext": "Server=localhost;port=5432;Database=vino; uid=postgres; password=postgres;"
+    "VinoDrillDbContext": "Server=localhost;port=5432;Database=vino; uid=postgres; password=postgres;",
+    "VinoDrillDbContextRemote": "Server=https://postgresql-vinodrill.alwaysdata.net;port=5432;Database=vinodrill_main_db; uid=vinodrill; password=uaK99vfWnq6GLrg; SearchPath=vinodrill;"
   }
 }
