--- a/Vinodrill_Back/appsettings.json
+++ b/Vinodrill_Back/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "VinoDrillDbContext": "Server=localhost;port=5432;Database=vino; uid=postgres; password=postgres;",
-    "VinoDrillDbContextRemote": "Server=https://postgresql-vinodrill.alwaysdata.net;port=5432;Database=vinodrill_main_db; uid=vinodrill; password=uaK99vfWnq6GLrg; SearchPath=vinodrill;"
+    "VinoDrillDbContextRemote": "Server=postgresql-vinodrill.alwaysdata.net;port=5432;Database=vinodrill_main_db;uid=vinodrill;password=uaK99vfWnq6GLrg;SearchPath=vinodrill;"
   }
 }
