--- a/.github/workflows/master_vinodrill.yml
+++ b/.github/workflows/master_vinodrill.yml
@@ -6,7 +6,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - vinodrill
 on:
   push:
     branches:
-      - master
+      - deploy
   workflow_dispatch:
 
 jobs:
