--- a/Vinodrill_Back/appsettings.json
+++ b/Vinodrill_Back/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "VinoDrillDbContext": "Server=localhost;port=5432;Database=vino; uid=postgres; password=postgres;",
     "VinoDrillDbContextRemote": "Server=postgresql-vinodrill.alwaysdata.net;port=5432;Database=vinodrill_main_db;uid=vinodrill;password=uaK99vfWnq6GLrg;SearchPath=vinodrill;"
+  },
+  "JWT": {
+    "ValidAudience": "http://127.0.0.1:5173",
+    "ValidIssuer": "https://localhost:7169",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
