Add fontend info

--- a/Vinodrill_Back/appsettings.json
+++ b/Vinodrill_Back/appsettings.json
@@ -14,5 +14,8 @@
     "ValidAudience": "http://127.0.0.1:5173",
     "ValidIssuer": "https://localhost:7169",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+  },
+  "Frontend": {
+    "Url": "http://localhost:4200"
   }
 }
