--- a/Vinodrill_Back/Vinodrill_Back.csproj
+++ b/Vinodrill_Back/Vinodrill_Back.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\AuthDb\**" />
+    <Content Remove="Migrations\AuthDb\**" />
+    <EmbeddedResource Remove="Migrations\AuthDb\**" />
+    <None Remove="Migrations\AuthDb\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.14" />
@@ -24,7 +32,6 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Migrations\AuthDb\" />
   </ItemGroup>
 
 </Project>
